--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -2496,13 +2496,19 @@ nav{
 }
 
 .schoolname span{
-          color: rgb(0, 207, 255, 0.5)
+          color: rgb(0, 207, 255, 0.5);
            /* opacity: 0.7; */
+           display: flex;
+            justify-content: center;
+            align-items: center;
 }
 
 .schoolname button{
             /* color: rgb(172, 87, 251,0.4); */
             /* opacity: 0.7; */
+            display: flex;
+            justify-content: center;
+            align-items: center;
 }
       
 }
