--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -2501,6 +2501,7 @@ nav{
            display: flex;
             justify-content: center;
             align-items: center;
+            padding-top: 2px;
 }
 
 .schoolname button{
@@ -2509,6 +2510,7 @@ nav{
             display: flex;
             justify-content: center;
             align-items: center;
+            padding-top: 2px;
 }
       
 }
