--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -2451,6 +2451,7 @@ nav{
           height: 25px;
           font-size: 13px;
           width: 100px;
+          padding-top: 2px;
          
          
 }
