--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -1204,10 +1204,10 @@ nav{
     backdrop-filter: blur(10px);
     padding: 24px;
     border-radius: 20px;
-    border: 2px solid transparent;
-  transition: all 0.4s;
+    border: 1px solid transparent;
+  /* transition: all 0.4s; */
   cursor: pointer;
-   transition: all 0.3s ease-in-out;
+   transition: all 0.3s;
 
 }
 
@@ -1242,9 +1242,10 @@ nav{
 }
 .skill-card:hover {
 
-       background-color: rgba(1, 42, 51, 0.7); 
-       border: 1px solid rgb(1, 255, 170,0.2);
-       box-shadow: 0px 0px 5px skyblue;
+       background-color: rgba(1, 42, 51, 0.5); 
+        box-shadow:0px 0px 3px rgb(135, 206, 235,0.5);
+        transform: scale(1.03);
+
    
 }
 
