--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -1432,7 +1432,7 @@ nav{
 .college:hover{
 
           box-shadow: 0px 0px 5px rgb(0, 125, 123);
-          transform: translateX(30px);
+          transform: translateX(10px);
 }
 
 .collegename{
@@ -1445,7 +1445,7 @@ nav{
 
           font-size: 20px;
           font-weight: 400;
-          color: rgb(0, 207, 255,0.9);
+          color: rgb(0, 207, 255,0.8);
 
 }
 
@@ -1457,7 +1457,7 @@ nav{
 .collegename button{
 
         
-          color: rgb(0, 207, 255,0.9);
+          color: rgb(0, 207, 255,0.8);
           background-color: rgb(0, 207, 255,0.1);
           backdrop-filter: blur(10px);
           border: none;
@@ -1506,7 +1506,7 @@ nav{
 
 .collegename h3 {
         
-           color: white;
+           color: rgb(255, 255, 255,0.8);
           /* font-family: "Varela Round", sans-serif;
   font-weight: 400;
   font-style: normal; */
@@ -1666,6 +1666,69 @@ nav{
         transform: scale(1.05);
 }
 
+
+
+
+/* ------------ PROJECT CONTAINER ----------- */
+
+
+
+.project-container{
+
+            width: 100%;
+             padding: 50px;
+              background-image: radial-gradient( rgb(1, 22, 42) 5% , black );
+              border: 1px solid white;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+}
+
+
+.project-title{
+           color: white;
+          
+  font-size: 50px;
+  padding-bottom: 30px;
+   font-family: "Varela Round", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  
+  
+}
+
+
+
+
+.project-title span{
+
+           border-bottom: 2px solid rgb(0, 207, 255, 0.6);
+           padding-bottom: 20px;
+}
+
+
+.project-content{
+
+         width: 100%;
+         padding: 10px;
+         border: 1px solid white;
+         margin-top: 50px;
+         display: grid;
+         gap: 30px;
+         /* flex-wrap: wrap; */
+         grid-template-columns: auto auto auto;
+
+}
+
+.project-box{
+
+      display: grid;
+
+     
+           border: 1px solid yellow;
+           padding: 20px;
+}
 
 
 
@@ -2263,18 +2326,21 @@ nav{
      .home-iconbox button:hover{
 
   
-     box-shadow:0px 0px 0px black;
+     /* box-shadow:0px 0px 0px black;
 
      transform: translateY(0px);
      border: 1px solid rgb(109, 108, 108, 0.5);
-    background-color: rgb(128, 128, 128, 0.2);
+    background-color: rgb(128, 128, 128, 0.2); */
     
-    /* backdrop-filter: blur(30px); */
+    pointer-events: none;
+   
 
 
 }
 
-/* .home-iconbox button:hover{
+
+
+ .home-iconbox button:hover{
 
     background-color: rgb(0,207,255,0.1);
     border: 1px solid rgb(0,207,255,0);
@@ -2285,7 +2351,7 @@ nav{
      transform: translateY(0px);
 
 
-} */
+} 
 
  .home-iconbox button:active{
          transform: scale(0.5);
@@ -2530,6 +2596,7 @@ nav{
      }
 
 
+    
 
 
 
