--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -12,6 +12,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 
 
 
@@ -108,15 +110,18 @@ nav{
        color: rgb(0, 200, 255) !important;
        padding-left: 15px !important;
        padding-right: 15px !important;
-       transform: scale(1.2);
+       transform: scale(1.1);
        /* transition: all 0.1s; */
       
 }
 
 .nav-link{
-  font-family: "Josefin Sans", sans-serif;
+  
+ 
+
+     font-family: "Rubik", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 600;
+  font-weight: 400;
   font-style: normal;
  
   transition: all 0.6s ease-in-out !important;
@@ -136,7 +141,7 @@ nav{
 }
 
 .nav-link:active{
-    transform: scale(0.5) !important;
+    transform: scale(0.6) !important;
     color: rgb(20, 20, 20) !important;
     
 }
@@ -144,7 +149,7 @@ nav{
 .portfolio {
  
   font-size: 30px !important;
-  transition: all 0.6s ease-in-out !important;
+  transition: all 0.3s ease-in-out !important;
  
 }
 
@@ -1965,7 +1970,7 @@ nav{
             width: 100%;
              padding: 50px;
               background-image: radial-gradient( rgb(1, 22, 42) 5% , black );
-              border: 1px solid white;
+              /* border: 1px solid white; */
               display: flex;
               justify-content: center;
               align-items: center;
@@ -2000,7 +2005,7 @@ nav{
 .contact-container{
 
           padding: 10px;
-          border: 1px solid red;
+          /* border: 1px solid red; */
           width: 90%;
          display: flex;
           gap: 50px;
@@ -2012,7 +2017,7 @@ nav{
 
            /* width: 100%; */
         
-           border: 1px solid yellow;
+           /* border: 1px solid yellow; */
            padding: 10px;
 }
 
@@ -2029,6 +2034,12 @@ nav{
 
 .contact-box2{
           width: 55%;
+
+       
+           background-color: rgba(0, 67, 82, 0.07);
+    backdrop-filter: blur(5px);
+        border: 1px solid rgb(255, 255, 255, 0.1);
+        border-radius: 20px;
 }
 
 .lets-connect{
@@ -2062,6 +2073,9 @@ nav{
         /* gap: 10px; */
 
         transition: all 0.2s;
+
+        
+     
 
 }
 
@@ -2125,6 +2139,7 @@ nav{
           display: flex;
           flex-direction: column;
           gap: 10px;
+          margin-top: 10px;
 }
 
 
@@ -2147,25 +2162,366 @@ nav{
         margin: 3px;
         height: 40px;
         width: 40px;
-        transition: all 0.3s;
+        transition: all 0.2s;
           
 }
 
 .connect_me button:active{
-          transform: scale(0.6);
+          transform: scale(0.5);
 }
 
 .connect_me a{
           text-decoration: none;
 }
 
+ .connect_me{
+
+                  display: flex;
+                  gap: 10px;
+              }
+
 .connect_me button:hover{
 
          border: 1px solid rgba(136, 136, 136, 0.3);
          color: rgb(0, 99, 99);
-         box-shadow: 0px 0px 10px rgb(0, 125, 125);
+         box-shadow: 0px 0px 10px rgb(1, 174, 174);
+         transform: translateY(-3px);
+         background-color:rgb(1, 106, 106);
+          color: black;
+}
+
+
+.contact-form{
+
+           /* border: 1px solid white; */
+           padding: 50px;
+           width: 100%;
+           display: flex;
+           flex-direction: column;
+           gap: 20px;
+}
+
+.form-name label{
+          color: rgb(215, 215, 215);
+          font-size: 18px;
+
+           font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    /* font-weight: 400; */
+    font-style: normal;
+}
+
+.form-name label i{
+          /* font-size: 17px; */
+          margin-right: 3px;
+           color: rgb(1, 134, 163)
+}
+
+.form-name input,textarea{
+         width: 100%;
+         padding: 10px;
+         height: 45px;
+         background: transparent;
+         background-color: rgb(0, 125, 125,0.15) ;
+         border:none;
+        border: 1px solid rgba(136, 136, 136, 0.3);
+        border-radius: 10px;
+        padding-left: 20px;
+
+      outline: none;
+     
+      box-shadow: 2px 2px 4px rgba(0,0,0,0.3) ;
+      color: rgb(230, 230, 230);
+      margin-top: 5px;
+
+      
+       
+}
+
+.form-name input::placeholder{
+
+           color: rgb(136, 136, 136);
+            font-family: "Varela Round", sans-serif;
+           font-style: normal;
+           font-size: 15px;
+          
+        
+}
+
+
+form div{
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+          
+    
+
+}
+
+.failure-icon, .success-icon{
+          position: absolute;
+          right: 20px;
+         font-size: 18px;
+          bottom: 20.5px;
+          opacity: 0;
+}
+
+.failure-icon, .error{
+          color: red;
+}
+
+.error{
+          color: rgb(255, 0, 0,0.8);
+}
+
+.failure-icon{
+        position: absolute;
+          bottom: 42.5px;
+}
+
+.success-icon{
+          color: green;
+}
+
+.error{
+
+      font-size: 14.5px;
+      margin-top: 3px;
+
+}
+
+input:focus{
+      border:  2px solid #007294;
+       box-shadow: 0 0 0 3px rgba(14, 165, 233, 0.2);
+
+}
+
+
+.form-textarea{
+          padding: 10px;
+          padding-left: 20px;
+          height: 150px;
+}
+
+.form-textarea:focus{
+
+         border:  2px solid #007294;
+          box-shadow: 0 0 0 3px rgba(14, 165, 233, 0.2);
+
           
 }
+
+input::marker{
+
+          
+}
+
+.form-name textarea::placeholder{
+
+           color: rgb(136, 136, 136);
+           font-family: "Varela Round", sans-serif;
+           font-style: normal;
+            font-size: 15px;
+}
+
+
+.form-btn button{
+
+          width: 100%;
+          height: 45px;
+          border-radius: 10px;
+          background-color: rgb(0, 207, 255, 0.7) ;
+         border:none;
+        border: 1px solid rgba(136, 136, 136, 0.3);
+        color: white;
+        font-family: "Varela Round", sans-serif;
+ 
+  font-style: normal;
+  transition: all 0.3s;
+}
+
+.form-btn button:active{
+
+         transform: scale(0.9);
+
+}
+
+
+
+
+
+
+
+
+
+
+/* ----------- Footer ------------ */
+
+.footer{
+          width: 100%;
+             padding: 50px;
+             padding-top: 70px;
+             padding-bottom: 30px;
+              background-image: radial-gradient( rgb(1, 22, 42) 5% , black );
+              /* border: 1px solid white; */
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+}
+
+
+.foot{
+         width: 95%;
+         padding: 10px;
+         /* border: 1px solid red; */
+         display: flex;
+}
+
+.foot-box{
+
+           /* border: 1px solid white; */
+           width: 30%;
+           padding: 20px;
+
+
+}
+
+.foot-box1{
+
+          width: 40%;
+}
+
+.foot-box1 h2{
+          color: rgb(215, 215, 215);
+            font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    /* font-weight: 400; */
+    font-style: normal;
+    transition: all 0.3s ease-in-out;
+}
+
+.foot-box1 p{
+      color: rgb(149, 147, 147);
+         font-family: "Varela Round", sans-serif;
+         font-style: normal;
+         font-size: 16px;
+         width: 90%;
+         transition: all 0.3s ease-in-out;
+}     
+
+
+.foot-box2{
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+}
+
+.foot-box2 a{
+          text-decoration: none;
+       color: rgb(149, 147, 147);
+          font-size: 16px;
+           font-family: "Varela Round", sans-serif;
+           font-style: normal;
+          
+           transition: all 0.3s ease-in-out;
+}
+
+.foot-box2 a:hover{
+
+            color: rgb(0, 160, 185);
+            transform: translateX(10px);
+}
+
+
+.foot-box2 h3{
+
+         color: rgb(215, 215, 215);
+           font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    /* font-weight: 400; */
+    font-style: normal;
+}
+
+
+.foot-box3{
+
+           display: flex;
+           flex-direction: column;
+           /* justify-content: center; */
+           align-items: center;
+           gap: 10px;
+}
+
+.foot-box3 h3{
+          color: rgb(215, 215, 215);
+              font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+   
+    font-style: normal;
+
+}
+
+.foot-box3 button{
+          height: 45px;
+          width: 45px;
+         background-color: rgba(0, 67, 82, 0.07);
+    backdrop-filter: blur(5px);
+        border: 1px solid rgb(255, 255, 255, 0.1);
+
+        color: rgb(149, 147, 147);
+         border-radius: 5px;
+         transition: all 0.2s;
+
+}
+
+.foot-box3 button:hover{
+
+         transform: translateY(-5px);
+         box-shadow: 0px 0px 10px cyan;
+
+           
+}
+.foot-box3 button i{
+
+           font-size: 20px;
+}
+
+
+.footer-btn-box{
+        display: flex;
+        gap: 15px;
+
+}
+
+.footer-bottom{
+
+         padding: 30px;
+         border-top: 1px solid grey;
+         width: 95%;
+         margin-top: 20px;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         flex-direction: column;
+         transition: all 0.3s ease-in-out;
+}
+
+.footer-bottom p{
+          margin: 3px;
+         /* color: rgb(144, 144, 144); */
+         transition: all 0.3s ease-in-out;
+          font-family: "Varela Round", sans-serif;
+           font-style: normal;
+           font-size: 14px;
+           color: grey;
+}
+
+.footer-bottom i{
+          color: rgb(255, 0, 0,0.7);
+}
+
 
 
 
@@ -2207,6 +2563,16 @@ nav{
 
         .point3{
              top: 68%;
+        }
+
+
+
+        /* contact  */
+
+
+
+        .contact-container{
+                  width: 95%;
         }
 }
 
@@ -2440,7 +2806,22 @@ nav{
           width: 100%;
           padding: 30px;
        }
- 
+
+
+
+        /* contact  */
+
+
+
+        .contact-container{
+                  width: 100%;
+        }
+
+
+
+
+        /* ============= Footer ============== */
+
    
 
 
@@ -2622,8 +3003,83 @@ nav{
                  font-size: 13px;
         }
 
+        /* =========== contact ======== */
+
+
+        .contact-container{
+
+                 display: flex;
+                 flex-direction: column;
+        }
+
+        .contact-box{
+                 width: 100%;
+        }
+
+
+        .contact-icon-text h4{
+                 font-size: 20px;
+        }
 
       
+        .contact-icon-text a{
+                  font-size: 14px;
+        }
+
+        .lets-connect-p{
+
+                  font-size: 14.5px;
+        }
+
+        .form-name label{
+                  font-size: 17px;
+        }
+
+
+        /* ================== Footer ==================== */
+
+        
+        .foot{
+                  width: 100%;
+                  display: flex;
+                  flex-direction: column;
+                  padding: 0px;
+        }
+ 
+        .footer{
+                padding: 40px;  
+                padding-bottom: 0px;
+            }
+
+            .foot-box{
+                  width: 100%;
+                  padding-left: 0px;
+                  transition: all 0.3s ease-in-out;
+            }
+
+            .foot-box3{
+                 align-items: flex-start;
+            }
+
+            .foot-box3 button{
+                 height: 40px;
+                 width: 40px;
+            }
+
+            .foot-box3 button i{
+                  font-size: 17px;
+            }
+
+            .footer-bottom{
+                  width: 100%;
+            }
+
+            .footer-bottom p{
+
+                  font-size: 14px;
+                  margin: 2px;
+                  
+            }
 }
 
 
@@ -3308,8 +3764,153 @@ nav{
           
       }
 
+
+
+      /* -------------- Contact ---------------- */
+
+
+      .contact{
+         padding: 30px;
+         padding-top: 50px;
+         padding-bottom: 50px;
+      }
       
+      .contact-container{
+         padding: 0px;
+      }
+
+      .contact-box1{
+          padding: 10px;
+      }
+
+      .contact-title{
+          font-size: 36px;
+      }
+
+      .contact-title span {
+
+          padding-bottom: 15px;
+      }
+
+      .contact-p{
+
+          font-size: 15px;
+          text-align: center;
+      }
+
+      .lets-connect{
+         font-size: 23px;
+      }
+
+      .lets-connect-p{
+         font-size: 13.5px;
+      }
+
+      .connect_me{
+          gap: 7px;
+          
+
+      }
+
+      .connect_me button:hover{
+         pointer-events: none;
+
+        
+      }
+
+       .connect_me button:active{
+
+        transform: scale(0.6);
+        
+
+        
+      }
+
+
       
+
+          .contact-icon-text h4 {
+
+                  font-size: 17px;
+          }
+
+          .contact-icon{
+                  height: 50px;
+                  width: 60px;
+          }
+
+              .contact-icon-text a {
+
+                 font-size: 13px;
+              }
+
+              .contact-form{
+                 padding: 0px;
+                 padding-top: 30px;
+                 padding-bottom: 30px;
+              }
+
+              .form-name input::placeholder{
+                 font-size: 14px;
+              }
+
+              .form-name input{
+                  display: flex;
+                  justify-content: right;
+                  font-size: 14px;
+                  height: 40px;
+              }
+
+              .form-textarea{
+                  height: 125px;
+              }
+
+              .form-btn button{
+
+                   height: 40px;
+                   font-size: 14.5px;
+              }
+
+
+
+
+
+
+              /* ============ Footer ============== */
+
+              .footer{
+                  padding: 30px;
+              }
+
+              
+              .foot-box1 p{
+
+                font-size: 14px;
+                 
+              }
+
+              .foot-box2 a{
+
+                    font-size: 15px;
+              }
+
+              .footer-bottom p{
+                font-size: 12px;
+                
+
+              }
+
+              .footer-bottom{
+                 padding-bottom: 0px;
+              }
+
+              .foot-box{
+                 padding-bottom: 10px;
+              }
+
+
+
+              
 
 
 }
