--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -2222,7 +2222,7 @@ nav{
          padding: 10px;
          height: 45px;
          background: transparent;
-         background-color: rgb(0, 125, 125,0.15) ;
+         background-color: rgba(94, 94, 94, 0.1) ;
          border:none;
         border: 1px solid rgba(136, 136, 136, 0.3);
         border-radius: 10px;
@@ -2498,7 +2498,7 @@ input::marker{
 .footer-bottom{
 
          padding: 30px;
-         border-top: 1px solid grey;
+         border-top: 1px solid rgb(128, 128, 128,0.3);
          width: 95%;
          margin-top: 20px;
          display: flex;
@@ -3141,14 +3141,15 @@ input::marker{
       nav{
              padding-left: 0px;
              padding-right: 0px;
+             
       }
 
       .portfolio{
-              font-size: 23px !important;
+              font-size: 25px !important;
       }
 
       .portfolio span{
-              font-size: 31px !important;
+              font-size: 35px !important;
       }
 
       .home-contentbox{
@@ -3365,7 +3366,7 @@ input::marker{
       }
 
       .About-h1{
-              font-size: 35px;
+              font-size: 33px;
       }
 
       .about-content h1{
@@ -3575,7 +3576,7 @@ input::marker{
 }
 
 .education-h1{
-          font-size: 40px;
+          font-size: 33px;
           padding-bottom: 50px;
 }
 
@@ -3718,7 +3719,7 @@ input::marker{
       /* ------------ Project ------------ */
 
       .project-title{
-          font-size: 36px;
+          font-size: 33px;
       }
 
       .project-box{
@@ -3784,7 +3785,7 @@ input::marker{
       }
 
       .contact-title{
-          font-size: 36px;
+          font-size: 33px;
       }
 
       .contact-title span {
@@ -3848,6 +3849,7 @@ input::marker{
                  padding: 0px;
                  padding-top: 30px;
                  padding-bottom: 30px;
+                 gap: 25px;
               }
 
               .form-name input::placeholder{
@@ -3871,6 +3873,44 @@ input::marker{
                    font-size: 14.5px;
               }
 
+              .lets-connect{
+                  color: rgb(188, 186, 186);
+              }
+
+              .contact-box2{
+                 padding: 20px;
+              }
+
+              form div{
+
+                  gap: 0px;
+              }
+
+
+              .form-name label i {
+
+                   margin-right: 1px;
+              }
+
+              .form-name label{
+
+                  font-size: 15px;
+              }
+
+              .form-btn button{
+                 width: 55%;
+                 margin: auto;
+                 font-size: 13.5px;
+                 background-color: rgb(1, 134, 163);
+              }
+
+              .failure-icon{
+                bottom:35px;
+              }
+
+              .success-icon{
+                    bottom: 12.5px;
+              }
 
 
 
@@ -3909,7 +3949,65 @@ input::marker{
               }
 
 
+              .foot-box1 h2 {
+    color: rgb(215, 215, 215,0.8);
+    /* margin: 0px; */
+    font-size: 20px;
 
+ }
+
+ .foot-box1 p{
+         margin: 0px;
+         margin-top: 1px;
+ }
+
+ .foot-box2 h3 {
+    color: rgb(215, 215, 215,0.8);
+    font-size: 20px;
+
+ }
+
+
+ .foot-box2{
+         gap: 5px;
+ }
+
+ .foot-box3 h3 {
+    color: rgb(215, 215, 215,0.8);
+    font-size: 20px;
+
+ }
+
+ .foot-box3 button {
+          pointer-events: none;
+ }
+
+ .foot-box3 button:active{
+           transform: scale(0.6);
+ }
+
+ .footer-btn-box{
+
+          gap: 10px;
+ }
+
+ .footer-bottom p{
+
+          font-size: 11px;
+ }
+
+
+
+
+
+
+
+              /* ------------------------- */
+
+
+              .section-subtitle{
+                  font-size: 14px;
+              }
               
 
 
