--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -911,7 +911,7 @@ nav{
 }
 
 .about-btn1:active{
-        transform: scale(0.4);
+        transform: scale(0.6);
         background-color: black;
 }
 
@@ -2127,6 +2127,7 @@ nav{
   font-style: normal;
   font-size: 15px;
   /* margin-left: 5px; */
+  cursor: pointer;
   transition: all 0.3s;
 }
 
@@ -2166,9 +2167,7 @@ nav{
           
 }
 
-.connect_me button:active{
-          transform: scale(0.5);
-}
+
 
 .connect_me a{
           text-decoration: none;
@@ -2188,6 +2187,10 @@ nav{
          transform: translateY(-3px);
          background-color:rgb(1, 106, 106);
           color: black;
+}
+
+.connect_me button:active{
+         transform: scale(0.6);
 }
 
 
@@ -2416,19 +2419,26 @@ input::marker{
           display: flex;
           flex-direction: column;
           gap: 10px;
+       
 }
 
-.foot-box2 a{
+
+
+.foot-a{
+
+          color: rgb(149, 147, 147);
           text-decoration: none;
-       color: rgb(149, 147, 147);
-          font-size: 16px;
+           font-size: 16px;
+          cursor: pointer;
+          
            font-family: "Varela Round", sans-serif;
            font-style: normal;
           
            transition: all 0.3s ease-in-out;
+        
 }
 
-.foot-box2 a:hover{
+.foot-a:hover{
 
             color: rgb(0, 160, 185);
             transform: translateX(10px);
@@ -2520,6 +2530,12 @@ input::marker{
 
 .footer-bottom i{
           color: rgb(255, 0, 0,0.7);
+}
+
+.footer-btn-box button:active{
+
+          transform: scale(0.6);
+
 }
 
 
@@ -2871,6 +2887,17 @@ input::marker{
               margin-top: 4px;
          }
 
+         .collapse{
+                  justify-content: start;
+                
+         }
+
+         .navbar-collapse {
+                 margin-top: 30px;
+                
+         }
+
+        
 
          /* ----- About Page ------ */
 
@@ -3819,13 +3846,7 @@ input::marker{
         
       }
 
-       .connect_me button:active{
-
-        transform: scale(0.6);
-        
-
-        
-      }
+     
 
 
       
@@ -3902,8 +3923,10 @@ input::marker{
                  margin: auto;
                  font-size: 13.5px;
                  background-color: rgb(1, 134, 163);
+                
               }
 
+             
               .failure-icon{
                 bottom:35px;
               }
